Solve the issues with the logo flickering. Updated the CSS and the README file to reflect all updates and changes to the repo that we are using.

--- a/assets/css/topics.css
+++ b/assets/css/topics.css
@@ -55,7 +55,7 @@ body {
     text-transform: uppercase;
 
     /*this will fix the shakiness of the element contatiner*/
-    backface-visibility: hidden;
+    
 }
 
 .heading-primary-main {
